--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+overall{
+  justify-content: center;
+  margin: auto;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
